corrected spacing in CSS for teachers, about, classes dynamic content

--- a/public/CSS/aboutstyle.css
+++ b/public/CSS/aboutstyle.css
@@ -39,6 +39,7 @@ main {
   grid-row: 2/3;
   color: var(--darkGrey);
   height: auto;
+
 }
 
 h1 {
@@ -55,11 +56,12 @@ h2 {
   grid-column: 1/7;
   grid-row: 2/3;
   text-align: left;
+  padding: .5rem;
 }
 .classContainer {
-  display: grid;
+  /* display: grid;
   grid-template-columns: 1fr 1fr 1fr auto;
-  grid-auto-rows: 1fr 1fr;
+  grid-auto-rows: 1fr 1fr; */
   margin-top: 1em;
   margin-bottom: 1em;
   padding: 1em;
